# ompl

./: CMakeLists.txt  README.md  RigidBodyPlanning.cpp  RigidBodyPlanningBackup.cpp  RigidBodyPlanning_RRTStar.cpp  obstacles.txt  obstacles_large.txt  visualizeresult.py
